# agave-checkout-gen

./: .gitignore  Cargo.toml  README.md
output/: mods.dot  packages_with_path.json  sparse_checkout_command.sh
src/: constants.rs  lib.rs  main.rs
src/processors/: cargo_toml.rs  git_command.rs  mod.rs  package_analyzer.rs
tests/: compilation_test.rs  package_list.txt  test_all_packages.rs
