[package]
name = "agave_checkout_gen"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[dependencies]
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[dev-dependencies]
agave_checkout_gen = { path = "." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
